# pre-commit-template

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
pre_commit_template/: __main__.py  config.py  discover.py  main.py
pre_commit_template/hook_templates/: __init__.py  base.j2  docker.j2  js.j2  meta.j2  python.j2  render.py
scripts/: update_hook_versions.py
src/: cli.rs  config.rs  discover.rs  main.rs  render.rs  ui.rs
templates/: github_actions.j2  go.j2  meta.j2
tests/: test_config.py  test_discover.py  test_discover_edge_cases.py  test_main.py  test_render_template_edge_cases.py
tests/pre_commit_template_hooks/: __init__.py
tests/pre_commit_template_hooks/base/: __init__.py  test_base.py
tests/pre_commit_template_hooks/docker/: __init__.py  test_docker.py
tests/pre_commit_template_hooks/js/: __init__.py  test_js.py
tests/pre_commit_template_hooks/python/: test_python.py
